Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25959

Compile output parser does not support AutoMocs output: "filename(line:column)"

XMLWordPrintable

    • Windows
    • e36d54bdd7c5797e48375c71d9923a6beffb4e7c (qt-creator/qt-creator/5.0)

      On a bad day, the build can break like this

      AutoMoc subprocess error
      ------------------------
      [...]
      C:/Users/alportal/dev/qt-creator-qt6/src/plugins/qmlprofiler/qmlprofilerplugin.h(38:1): error: Plugin Metadata file "QmlProfiler.json" does not exist. Declaration will be ignored

      And Qt Creator is not able to create a functioning file link from the error message:

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes