QtSupport: Fix moc output parser for Qt 6

Fixes: QTCREATORBUG-25959
Change-Id: Iba03fd31b1759ae99bd6567003b020e8ad35872f
Reviewed-by: Christian Stenger <christian.stenger@qt.io>